[package]
name = "leptos_lints"
version = "0.1.0"
authors = ["Álvaro Mondéjar Rubio"]
description = "Dylint lints for apps created with the Leptos framework."
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos_print_stdout = { path = "lints/leptos_print_stdout", features = ["rlib"] }
dylint_linting.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = ["lints/*"]

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "0450db33a5d8587f7c1d4b6d233dac963605766b" }
dylint_linting = "4.1.0"
dylint_testing = "4.1.0"
leptos = ">=0.5"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "." },
]
